# static-site-gen

./: .gitignore  Cargo.toml  Makefile
.cargo/: config
.github/workflows/: config.yml
markdown/: test.md
public/: index.html
src/: main.rs  markdown.rs  render.rs
templates/: index.html
terraform/: main.tf
terraform/.terraform/: environment  terraform.tfstate
themes/boring/: package.json  tailwind.config.js
themes/boring/content/blog/: 2026.md  global_hashtable.md  intro.md  jemalloc.md  neural-nets.md  post-1.md  tpchgenrs.md  tracking.md
themes/boring/static/: index.html
themes/boring/templates/: base.html  index.html  page.html  section.html
