[package]
name = "static-site-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {  version = "4.5.1", features = ["derive"] }
markdown = "1.0.0-alpha.16"
tera = "1.19.1"
lazy_static = "1.4.0"
glob = "0.3.1"
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.1", features = ["fs"] }
frontmatter = "0.4.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.32"
yaml-rust = "0.4.5"
serde_json = "1.0.113"
chrono = "0.4.34"
